--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.2.12",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.53.0"
+    "react-hook-form": "^7.53.0",
+    "sass": "^1.79.3"
   },
   "devDependencies": {
     "@types/node": "^20",
