--- a/src/utils/configPath.json
+++ b/src/utils/configPath.json
@@ -2,5 +2,12 @@
     "home": "/",
     "dashboard": {
         "_": "/dashboard"
+    },
+    "elements": {
+        "_": "/elements"
+    },
+    "widgets": {
+        "_": "/widgets",
+        "dataEntry": "/widgets/dataEntry"
     }
 }
