--- a/src/utils/configPath.json
+++ b/src/utils/configPath.json
@@ -10,6 +10,7 @@
     },
     "widgets": {
         "_": "/widgets",
-        "dataEntry": "/widgets/dataEntry"
+        "dataEntry": "/widgets/dataEntry",
+        "calendar": "/widgets/calendar"
     }
 }
